local/logs/project.log
2018-01-28T15:57:39.986Z - normal: Load ~/.CocosCreator/settings.json
2018-01-28T15:57:39.986Z - normal: checking language setting...
2018-01-28T15:57:39.986Z - normal: Language: en
2018-01-28T15:57:41.986Z - success: protocol editor-framework registered
2018-01-28T15:57:41.986Z - success: protocol app registered
2018-01-28T15:57:41.986Z - success: protocol theme registered
2018-01-28T15:57:41.986Z - success: protocol packages registered
2018-01-28T15:57:41.986Z - success: protocol unpack registerred
2018-01-28T15:57:41.986Z - success: protocol disable-commonjs registerred
2018-01-28T15:57:44.990Z - normal: failed to connect login server due to request timeout
2018-01-28T15:57:44.990Z - normal: Check project D:\GGJ
2018-01-28T15:57:44.990Z - normal: Initializing Cocos2d
2018-01-28T15:57:45.224Z - normal: Initializing Asset Database
2018-01-28T15:57:45.271Z - success: protocol uuid registerred
2018-01-28T15:57:45.271Z - success: protocol db registerred
2018-01-28T15:57:45.271Z - success: protocol thumbnail registerred
2018-01-28T15:57:45.271Z - normal: Loading editor/builtin packages
2018-01-28T15:57:45.287Z - success: anysdk loaded
2018-01-28T15:57:45.427Z - success: assets loaded
2018-01-28T15:57:45.443Z - success: builder loaded
2018-01-28T15:57:45.443Z - success: cocos-analytics loaded
2018-01-28T15:57:45.443Z - success: console loaded
2018-01-28T15:57:45.443Z - success: hierarchy loaded
2018-01-28T15:57:45.458Z - success: inspector loaded
2018-01-28T15:57:45.458Z - success: keystore loaded
2018-01-28T15:57:45.458Z - success: node-library loaded
2018-01-28T15:57:45.458Z - success: package-asset loaded
2018-01-28T15:57:45.458Z - success: preferences loaded
2018-01-28T15:57:45.458Z - success: project-exporter loaded
2018-01-28T15:57:45.490Z - success: project-importer loaded
2018-01-28T15:57:45.490Z - success: project-settings loaded
2018-01-28T15:57:45.490Z - success: ui-kit loaded
2018-01-28T15:57:45.490Z - success: ui-grid loaded
2018-01-28T15:57:45.490Z - success: scene loaded
2018-01-28T15:57:45.505Z - success: sprite-editor loaded
2018-01-28T15:57:45.505Z - success: store loaded
2018-01-28T15:57:45.505Z - success: timeline loaded
2018-01-28T15:57:45.505Z - normal: Loading builtin packages
2018-01-28T15:57:45.505Z - success: asset-db-debugger loaded
2018-01-28T15:57:45.505Z - success: code-editor loaded
2018-01-28T15:57:45.505Z - success: color-picker loaded
2018-01-28T15:57:45.521Z - success: package-manager loaded
2018-01-28T15:57:45.521Z - success: sdkbox loaded
2018-01-28T15:57:45.521Z - success: tester loaded
2018-01-28T15:57:45.521Z - success: ui-kit-preview-extra loaded
2018-01-28T15:57:45.521Z - success: ui-kit-preview loaded
2018-01-28T15:57:45.521Z - success: ui-tree loaded
2018-01-28T15:57:46.802Z - normal: Initializing project D:\GGJ
2018-01-28T15:57:46.834Z - normal: Loading packages
2018-01-28T15:57:46.834Z - normal: Watching packages
2018-01-28T15:57:46.849Z - normal: Run Application
2018-01-28T15:57:47.343Z - success: preview server running at http://localhost:7456
2018-01-28T15:57:52.984Z - normal: 1.8.1
2018-01-28T15:57:53.687Z - normal: ScaleX != ScaleY. Don't know which one to return
2018-01-28T15:57:53.687Z - normal: ScaleX != ScaleY. Don't know which one to return
2018-01-28T15:57:53.687Z - normal: ScaleX != ScaleY. Don't know which one to return
2018-01-28T15:57:53.687Z - normal: ScaleX != ScaleY. Don't know which one to return
2018-01-28T15:57:53.687Z - normal: ScaleX != ScaleY. Don't know which one to return
2018-01-28T15:57:53.688Z - normal: ScaleX != ScaleY. Don't know which one to return
2018-01-28T15:57:53.688Z - normal: ScaleX != ScaleY. Don't know which one to return
2018-01-28T16:08:57.343Z - normal: ScaleX != ScaleY. Don't know which one to return
2018-01-28T16:08:57.345Z - normal: ScaleX != ScaleY. Don't know which one to return
2018-01-28T16:08:57.345Z - normal: ScaleX != ScaleY. Don't know which one to return
2018-01-28T16:08:57.345Z - normal: ScaleX != ScaleY. Don't know which one to return
2018-01-28T16:08:57.345Z - normal: ScaleX != ScaleY. Don't know which one to return
2018-01-28T16:08:57.346Z - normal: ScaleX != ScaleY. Don't know which one to return
2018-01-28T16:08:57.346Z - normal: ScaleX != ScaleY. Don't know which one to return
2018-01-28T16:09:02.109Z - normal: ScaleX != ScaleY. Don't know which one to return
2018-01-28T16:09:02.110Z - normal: ScaleX != ScaleY. Don't know which one to return
2018-01-28T16:09:02.110Z - normal: ScaleX != ScaleY. Don't know which one to return
2018-01-28T16:09:02.111Z - normal: ScaleX != ScaleY. Don't know which one to return
2018-01-28T16:09:02.111Z - normal: ScaleX != ScaleY. Don't know which one to return
2018-01-28T16:09:02.111Z - normal: ScaleX != ScaleY. Don't know which one to return
2018-01-28T16:09:02.111Z - normal: ScaleX != ScaleY. Don't know which one to return
2018-01-28T16:10:55.260Z - failed: [db-task][sync-changes] Failed to import asset D:\GGJ\assets\CerrarVentana.js, message: Compile error: SyntaxError: D:/GGJ/assets/CerrarVentana.js: Unexpected token, expected , (35:21)
  33 | 
  34 |     // onLoad () {},
> 35 |     Cerrar: funtion(){
     |                      ^
  36 |         
  37 |     },
  38 |         
    at Parser.pp$5.raise (D:\CocosCreator\resources\app.asar\node_modules\babylon\lib\index.js:4454:13)
    at Parser.pp.unexpected (D:\CocosCreator\resources\app.asar\node_modules\babylon\lib\index.js:1761:8)
    at Parser.pp.expect (D:\CocosCreator\resources\app.asar\node_modules\babylon\lib\index.js:1749:33)
    at Parser.pp$3.parseObj (D:\CocosCreator\resources\app.asar\node_modules\babylon\lib\index.js:3978:12)
    at Parser.pp$3.parseExprAtom (D:\CocosCreator\resources\app.asar\node_modules\babylon\lib\index.js:3719:19)
    at Parser.pp$3.parseExprSubscripts (D:\CocosCreator\resources\app.asar\node_modules\babylon\lib\index.js:3494:19)
    at Parser.pp$3.parseMaybeUnary (D:\CocosCreator\resources\app.asar\node_modules\babylon\lib\index.js:3474:19)
    at Parser.pp$3.parseExprOps (D:\CocosCreator\resources\app.asar\node_modules\babylon\lib\index.js:3404:19)
    at Parser.pp$3.parseMaybeConditional (D:\CocosCreator\resources\app.asar\node_modules\babylon\lib\index.js:3381:19)
    at Parser.pp$3.parseMaybeAssign (D:\CocosCreator\resources\app.asar\node_modules\babylon\lib\index.js:3344:19)
2018-01-28T16:11:30.178Z - normal: ScaleX != ScaleY. Don't know which one to return
2018-01-28T16:11:30.179Z - normal: ScaleX != ScaleY. Don't know which one to return
2018-01-28T16:11:30.179Z - normal: ScaleX != ScaleY. Don't know which one to return
2018-01-28T16:11:30.180Z - normal: ScaleX != ScaleY. Don't know which one to return
2018-01-28T16:11:30.180Z - normal: ScaleX != ScaleY. Don't know which one to return
2018-01-28T16:11:30.180Z - normal: ScaleX != ScaleY. Don't know which one to return
2018-01-28T16:11:30.180Z - normal: ScaleX != ScaleY. Don't know which one to return
2018-01-28T16:23:20.987Z - info: shutdown preview server
